--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Models\CV.cs" />
     <Compile Include="Models\CVDbInitializer.cs" />
     <Compile Include="Models\CVRepository.cs" />
+    <Compile Include="Models\ExpAmount.cs" />
     <Compile Include="Models\ICVRepository.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\IUnitOfWork.cs" />
